[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/pwrup/spawn_3.png" type="Texture" id=3]
[ext_resource path="res://sprites/pwrup/spawn_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/pwrup/spawn_4.png" type="Texture" id=5]
[ext_resource path="res://sprites/pwrup/spawn_2.png" type="Texture" id=6]
[ext_resource path="res://objects/Pwrup.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "bob"
length = 1.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[node name="Pwrup" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 7 )

[node name="PwrupBobAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../PwrupSprite")
autoplay = "bob"
anims/bob = SubResource( 1 )

[node name="PwrupSprite" type="AnimatedSprite" parent="."]
playing = true
offset = Vector2( 0, -8 )

[node name="SpawnAnim" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
[connection signal="animation_finished" from="SpawnAnim" to="." method="_on_SpawnAnim_animation_finished"]
